add envs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+__pycache__
 *.py[cod]
 *$py.class
 
@@ -102,6 +103,8 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+.env-docker
+.env-local
 .env
 .venv
 env/
