--- a/.env-docker
+++ b/.env-docker
@@ -6,5 +6,5 @@ RESOURCES_DIR="/home/robomatic-test-executor-api/resources"
 BUILD_CONTEXT_DIR="/home/robomatic-test-executor-api/resources/context"
 SELENIUM_IMAGE="selenium-vnc:1.0"
 TEST_CASES_DIR="/home/cases/"
-DB_SERVER_URL=""  #your db url config
-RABBIT_SERVER_URL="" #your mq url config
+DB_SERVER_URL="postgresql://robomatic:robomatic@docker-postgresql:5432/test_executor"
+RABBIT_SERVER_URL="amqp://admin:admin@rabbitmq:5672"
