--- a/.env-local
+++ b/.env-local
@@ -1,10 +1,10 @@
 # .env
 CONFIGURATION_SETUP="config.LocalConfig"
-EVIDENCE_FILE_DIR="/home/evidence"
+EVIDENCE_FILE_DIR="/home/edgar/robomatic/github/evidence"
 HOST="localhost"
-RESOURCES_DIR="/home/robomatic-test-executor-api/resources"
-BUILD_CONTEXT_DIR="/home/robomatic-test-executor-api/resources/context"
+RESOURCES_DIR="/home/edgar/robomatic/github/robomatic-test-executor-api/resources"
+BUILD_CONTEXT_DIR="/home/edgar/robomatic/github/robomatic-test-executor-api/resources/context"
 SELENIUM_IMAGE="selenium-vnc:1.0"
-TEST_CASES_DIR="/home/cases/"
-DB_SERVER_URL=""  #your db url config
-RABBIT_SERVER_URL="" #your mq url config
+TEST_CASES_DIR="/home/edgar/robomatic/github/cases/"
+DB_SERVER_URL="postgresql://robomatic:robomatic@localhost:5432/test_executor"
+RABBIT_SERVER_URL="amqp://admin:admin@localhost:5672"
