--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 aio-pika==9.4.1
 beautifulsoup4==4.12.3
+cryptography==42.0.0
 docker==7.1.0
 fastapi==0.111.0
+lxml>=4.9.0
 numpy==1.24.4
 pandas==2.0.3
 pika==1.3.2
 psycopg2-binary==2.9.9
 pydantic==2.7.2
+pyOpenSSL>=23.0.0
+python-dotenv==1.0.1
 requests==2.32.3
 selenium==4.21.0
+
 SQLAlchemy==2.0.30
 uvicorn==0.30.0
